src/test/deca/syntax/parser/invalid/decl_var_in_if.deca
// Parser test, can't declare a variable after a declaration ("if")

{
    if (x || y ){
        int z = 5;
    }
}